--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-    "java.configuration.updateBuildConfiguration": "interactive",
-    "cmake.sourceDirectory": "C:/EduPulseQR/EduPulse-QR/linux"
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
